# wellwellwell

./: .gitignore  CITATION.cff  pyproject.toml  readme.md
examples/cowper/: notebook.ipynb
examples/cowper/data/: sample.txt
tests/: test_analyses.py  test_ingest.py  test_normalizations.py
wellwellwell/: analyses.py  ingest.py  normalizations.py  plots.py
