[tool.poetry]
name = "wellwellwell"
version = "0.1.0"
description = ""
authors = ["Donatas Rasiukevicius <d.rasiukevicius@uu.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.17.9"
xlsx2csv = "^0.8.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
