[tool.poetry]
name = "wellwellwell"
version = "0.1.0"
description = "Toolkit for analyzing 96-well plate data"
authors = ["Donatas Rasiukevicius <d.rasiukevicius@uu.nl>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.17.9"
xlsx2csv = "^0.8.1"
seaborn = "^0.12.2"
numpy = "^1.24.3"
ipykernel = "^6.23.1"
pyarrow = "^12.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
